added functionality like adding to cart

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             more!
         </p>
   
-    <div class="milktea-container first-background">
+    <div class="milktea-container">
         <div class="item-container">
             <div>
                 <img src="images/ube-halaya.jpg" alt="ube halaya milktea">
