minor modifications of stylesheet

--- a/index.html
+++ b/index.html
@@ -40,14 +40,25 @@
         </div>
 
         <!-- this section is for items -->
-        <section>
-            <div class="milktea-container">
-                <!-- every item should be under this div -->
+        <div class="milktea-container">
+            <!-- every item should be under this div -->
+            <div class="item-container">
+                <div class="img-container">
+                    <img src="images/ube-halaya.jpg" alt="ube halaya milktea">
+                    <p class="milktea-label">Ube Halaya</p>
+                </div>
+                <div class="item-price">
+                    <span> Php 80</span>
+                    <button class="milktea-label button-design">
+                        Add to Cart
+                    </button>
+                </div>
+            </div>
 
-                <div class="item-container">
-                    <div>
-                        <img src="images/ube-halaya.jpg" alt="ube halaya milktea">
-                        <p class="milktea-label">Ube Halaya</p>
+            <div class="item-container">
+                    <div class="img-container">
+                        <img src="images/mango-bravo.jpg">
+                        <p class="milktea-label">Mango Bravo</p>
                     </div>
                     <div class="item-price">
                         <span> Php 80</span>
@@ -55,47 +66,33 @@
                             Add to Cart
                         </button>
                     </div>
-                </div>
+            </div>
 
-                <div class="item-container">
-                        <div>
-                            <img src="images/mango-bravo.jpg">
-                            <p class="milktea-label">Mango Bravo</p>
-                        </div>
-                        <div class="item-price">
-                            <span> Php 80</span>
-                            <button class="milktea-label button-design">
-                                Add to Cart
-                            </button>
-                        </div>
+            <div class="item-container">
+                <div class="img-container">
+                    <img src="images/strawberry-ice.jpg">
+                    <p class="milktea-label">Stawberry Ice</p>
                 </div>
-
-                <div class="item-container">
-                    <div>
-                        <img src="images/strawberry-ice.jpg">
-                        <p class="milktea-label">Stawberry Ice</p>
-                    </div>
-                    <div class="item-price">
-                        <span> Php 80</span>
-                        <button class="milktea-label button-design">
-                            Add to Cart
-                        </button>
-                    </div>
+                <div class="item-price">
+                    <span> Php 80</span>
+                    <button class="milktea-label button-design">
+                        Add to Cart
+                    </button>
                 </div>
-                <div class="item-container">
-                    <div>
-                        <img src="images/oreo-cheese.jpg">
-                        <p class="milktea-label">Oreo Cheese</p>
-                    </div>
-                    <div class="item-price">
-                        <span> Php 80</span>
-                        <button class="milktea-label button-design">
-                            Add to Cart
-                        </button>
-                    </div>
+            </div>
+            <div class="item-container">
+                <div class="img-container">
+                    <img src="images/oreo-cheese.jpg">
+                    <p class="milktea-label">Oreo Cheese</p>
                 </div>
-        </section>
-
+                <div class="item-price">
+                    <span> Php 80</span>
+                    <button class="milktea-label button-design">
+                        Add to Cart
+                    </button>
+                </div>
+            </div>
+        </div>
         <!-- this section is for the cart items -->
 
         <section class="cart-container">
@@ -122,9 +119,9 @@
                         <button class="button-quantity button-remove">Remove</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="cart-item-row">
+            <!-- <div class="cart-item-row">
                 <img class="cart-item-image" src="images/ube-halaya.jpg">
                 <span class="cart-item-flavor">Ube Halaya</span>
                 <span class="cart-item-price">Php 80</span>
