polished css styles and fixed fuctionality

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
 
 
-        <div>
-            <p class="business-description">We are a small business delivering delicious milk tea refreshments, snacks, and
+        <div class="business-description">
+            <p>We are a small business delivering delicious milk tea refreshments, snacks, and
                 more!
             </p>
         </div>
@@ -101,25 +101,24 @@
 
             <!-- column labels -->   
             <div class="cart-column">
-                <span class="cart-item">Item</span>
-                <span class="cart-item">Flavor</span>
-                <span class="cart-item">Price</span>
-                <span class="cart-item">Quantity</span>
+                <span class="cart-item-label">Item</span>
+                <span class="cart-item-label">Flavor</span>
+                <span class="cart-item-label">Price</span>
+                <span class="cart-item-label">Quantity</span>
+                <span class="cart-item-label">Action</span>
             </div>
 
             <!-- checking layout of items added-->
-            <!-- <div class="cart-item-row">
-                <img class="cart-item-image" src="images/ube-halaya.jpg">
-                <span class="cart-item-flavor">Ube Halaya</span>
-                <span class="cart-item-price">Php 80</span>
-                <div class="quantity">
-                    <input class="cart-quantity" type="number" value="1">
-                    <div>
-                        <button class="button-quantity button-add">Add</button>
-                        <button class="button-quantity button-remove">Remove</button>
-                    </div>
+            <div class="cart-item-row">
+                <img class="cart-item-image row-items" src="images/ube-halaya.jpg">
+                <span class="cart-item-flavor row-items">Ube Halaya</span>
+                <span class="cart-item-price row-items">Php 80</span>
+                <input class="cart-quantity row-items" type="number" value="1">
+                <div class="button-container row-items">
+                    <button class="button-quantity button-add">Add</button>
+                    <button class="button-quantity button-remove">Remove</button>
                 </div>
-            </div> -->
+            </div>
 
             <!-- <div class="cart-item-row">
                 <img class="cart-item-image" src="images/ube-halaya.jpg">
